test : Service 로직 테스트 추가